[gd_scene load_steps=2 format=3 uid="uid://jkyhx6dnnpth"]

[ext_resource type="Script" uid="uid://ds4ifruhgebp1" path="res://minigame_teste.gd" id="1_6kxjs"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6kxjs")

[node name="QuestionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 89.0
offset_right = 129.0
offset_bottom = 23.0

[node name="FeedbackLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 196.0
offset_top = 63.0
offset_right = 236.0
offset_bottom = 86.0

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 44.0
offset_bottom = 27.0

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 90.0
offset_top = 66.0
offset_right = 130.0
offset_bottom = 89.0

[node name="AnswerLineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 77.0
offset_top = 29.0
offset_right = 145.563
offset_bottom = 60.0

[node name="SendButton" type="Button" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 28.0
offset_right = 196.0
offset_bottom = 59.0
text = "send"

[node name="CountdownTimer" type="Timer" parent="."]

[connection signal="pressed" from="SendButton" to="." method="_on_SendButton_pressed"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
